k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: label-studio
  labels:
    name: label-studio
    app: label-studio
